--- a/index.css
+++ b/index.css
@@ -1,5 +1,31 @@
+body{
+
+    margin: 0px;
+
+}
+
 .Header {
+    background-color: rgb(255, 166, 0);
+    padding: 10px;
+    color: white;
+    font-family:Arial, Helvetica, sans-serif;
+    text-align: center;
+    
+}
 
-  background = "color : red"
+.profile{
 
+    width: 512;
+    height: 366;
+    align-items: center;
+    box-align:center;
+    padding-bottom: 50px;
+
+}
+
+.intro{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 200;
+    text-align: center;
+    padding-top: 50px;
 }
