--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,7 +156,7 @@ input, select, textarea {
 	}
 
 	body {
-		display: -moz-flex;
+		/* display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
@@ -172,10 +172,33 @@ input, select, textarea {
 		width: 100%;
 		height: 100%;
 		min-height: 30rem;
-		overflow: hidden;
+		overflow: hidden; */
+		width:fit-content;
+  height: 100vh;
+  background: linear-gradient(-45deg, #3f51b1 0%, #5a55ae 13%, #7b5fac 25%, #8f6aae 38%, #a86aa4 50%, #cc6b8e 62%, #f18271 75%, #f3a469 87%, #f7c978 100%);;
+  background-size: 400% 400%;
+  position: relative;
+  animation: animate 7.5s ease-in-out infinite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -ms-overflow-style: scrollbar;
+  overflow: hidden;
+		
 	}
+	@keyframes animate{
+		0%{
+		  background-position: 0 50%;
+		}
+		50%{
+		  background-position: 100% 50%;
+		}
+		100%{
+		  background-position: 0 50%;
+		}
+	  }
 
-		body:before {
+		/* body:before {
 			-moz-animation: load-spinner 1s infinite linear;
 			-webkit-animation: load-spinner 1s infinite linear;
 			-ms-animation: load-spinner 1s infinite linear;
@@ -198,6 +221,7 @@ input, select, textarea {
 			height: 4rem;
 			margin: -2rem 0 0 -2rem;
 			background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='96px' height='96px' viewBox='0 0 96 96' zoomAndPan='disable'%3E%3Cstyle%3Ecircle %7Bfill: transparent%3B stroke: %232e2b37%3B stroke-width: 1.5px%3B %7D%3C/style%3E%3Cdefs%3E%3CclipPath id='corner'%3E%3Cpolygon points='0,0 48,0 48,48 96,48 96,96 0,96' /%3E%3C/clipPath%3E%3C/defs%3E%3Cg clip-path='url(%23corner)'%3E%3Ccircle cx='48' cy='48' r='32'/%3E%3C/g%3E%3C/svg%3E");
+			
 			background-position: center;
 			background-repeat: no-repeat;
 			background-size: 4rem;
@@ -215,13 +239,18 @@ input, select, textarea {
 			height: 100%;
 			z-index: -1;
 			background-attachment: fixed;
-			background-color: #e1e6e1;
-			background-image: url("../../images/overlay.png"), url("../../images/bg.jpg");
-			background-repeat: repeat, repeat-x;
+			background-color: #adccdd;
+			background-image: url("../../images/pattern.jpg"), url("../../images/pattern.jpg");
+			background-repeat:no-repeat, no-repeat;
 			background-size: 128px 128px, cover;
-		}
 
-		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
+			
+		} */
+
+			
+		
+
+		/* body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 			-moz-animation: none !important;
 			-webkit-animation: none !important;
 			-ms-animation: none !important;
@@ -242,7 +271,7 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			opacity: 0.25;
-		}
+		} */
 
 	@media screen and (max-width: 736px) {
 
